src/test/ui/closures/closure-immutable-outer-variable.stderr
error[E0594]: cannot assign to `y`, as it is not declared as mutable
  --> $DIR/closure-immutable-outer-variable.rs:11:26
   |
LL |     let y = true;
   |         - help: consider changing this to be mutable: `mut y`
LL |     foo(Box::new(move || y = false) as Box<_>);
   |                          ^^^^^^^^^ cannot assign

error: aborting due to previous error

